--- a/index.html
+++ b/index.html
@@ -7,37 +7,20 @@
     <style>
       body
       {
-        background-color: black; 
+        background: rgb(255,0,31);
+background: linear-gradient(90deg, rgba(255,0,31,1) 0%, rgba(0,0,0,1) 63%);
       }
     </style>
   </head>
   <body>
     <center>
-    <p style="color: white; font-size: 48px;">Hello welcome to  KH3GOD Website!</p>
+    <p style="color: white; font-size: 48px;">Hello welcome to AlivePhantom Website!</p>
 
-   <img src="https://www.101india.com/sites/default/files/styles/big_image/public/image-upload/blogs/Sports/2018_09_12WantToBeAGamer/cover%20gamer.jpg?itok=4DbtzHF7">
-   
+  
    <br>
    <br>
    
-   <a style="color: White;  font-size: 48px;   " href="https://www.youtube.com/channel/UCfrvMDD_addYmi9-FvOLQSg">  Be a subscriber  </a>
-   <br>
-   <br>
-   <br>
-   <a style="color: White;  font-size: 48px;   " href="youtube.png"> Look at this </a>
-   <br>
-   <br>
-    <br>
-     <br>
-   <a style="color: White;  font-size: 48px;   " href="owenyoutube.png"> check out this channel
-    <br>
-     </a>  <br><a style="color: White;  font-size: 48px;   " href="https://www.youtube.com/channel/UCroXnpUnp7xaJXmbfoai66w">  Check out my friends channel  </a>  
-     <br>
-      <br>
-       <br>
-        <br>
-         <br>
-          <br>
+  
     </center>
   </body>
 </html>
